--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "eml-format": "^0.6.1",
     "html-to-react": "^1.4.3",
     "npm-run-all": "^4.1.5",
+    "postcss": "^7.0.32",
+    "postcss-cli": "^7.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
